--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Alpha clash</title>
 
 <!-- Daisy UI and tailwind -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
@@ -75,31 +75,32 @@
             </div>   <!-- keyboard END -->
 
                 <div class="flex justify-between w-[1020px]">
-                    <!-- Life -->
+                    <!-- Display Life -->
                     <button class="btn rounded-full bg-[#894189] text-white px-4 ">
                         Life 
                        <img src="images/heart.svg" alt="">
-                        <span>1</span>
+                        <span id="current-life">5</span>
                       </button>
 
-                      <!-- Score -->
+                      <!-- Display Score -->
                       <button class="btn rounded-full bg-[#360490] text-white px-4 ">
                         Score
                         <img src="images/doller.svg" alt="">
-                       <span>1</span>
+                       <span id="current-score">0</span>
                       </button>
                 </div>
             </div>
         </section>
 
 <!-- section 3 :  Score-->
-        <section class="score flex justify-center items-center min-h-screen hidden ">
+        <section id="final-score" class=" flex justify-center items-center min-h-screen hidden ">
             <div class="text-white text-center space-y-6 bg-[#FFFFFF33] px-4 py-10 rounded-xl">
+                <h1 class="text-3xl font-bold">Bitch you lost!</h1>
                 <h1 class="text-8xl">
                     <span class="font-extrabold">Score :</span>
-                    <span class="font-medium">14</span>
+                    <span id="game-score" class="font-medium">14</span>
                 </h1>
-                <button class="btn  bg-white text-black text-2xl font-bold">Play Again</button>
+                <button onclick="play()" class="btn  bg-white text-black text-2xl font-bold">Play Again</button>
                 <p class="font-medium">Practice will make you Pro</p>
             </div>
         </section>
